--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>CalmGlow - Làm mới không khí, đánh thức tâm hồn với ánh sáng và hương thơm, tạo nên một thế giới bình yên ngay tại chính căn nhà của bạn. 
       </p>
       <div class="social-media">
-        <a href="https://www.facebook.com/calmglowofficial"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.facebook.com/calmglows"><i class='bx bxl-facebook'></i></a>
         
         
         <a href="https://www.instagram.com/calmglowofficial/"><i class='bx bxl-instagram-alt' ></i></a>
